Added endpoint to pull all school funding groups.